--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -13,6 +13,7 @@
   <!-- Styling -->
   <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rasa&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" type="text/css" href="./assets/css/loader.css">
   <link rel="manifest" href="manifest.webmanifest">
